--- a/index.html
+++ b/index.html
@@ -9,16 +9,27 @@
 
 </head>
 <body>
-
+<ul>
+  <li><a class="active" href="index.htm">Home</a></li>
+  <li><a href="extension.htm">GIS Services</a></li>
+  <li><a href="drone.htm">Drone Services</a></li>
+  <li><a href="port.htm">Portfolio</a></li>
+  <li><a href="extra_info.htm">About Us</a></li>
+  <li><a href="contact_info.htm">Contact</a></li>
+</ul>
+  
 <div class="header">
   <h1>Header</h1>
   <p></p>
 </div>
 
 <div class="topnav">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
+  <a href="#">Home</a>
+  <a href="#">About Us</a>
+  <a href="#">Drone Services</a>
+  <a href="#">GIS Services</a>
+  <a href="#">Portfolio</a>
+  <a href="#">Contact Us</a>
 </div>
 
 <div class="row">
