--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <p></p>
 </div>
 
-/* Everything together but sticky */
 <style>
 body {margin:0;font-family:Arial}
 
@@ -132,14 +131,15 @@ body {margin:0;font-family:Arial}
   <a href="#news">GIS Services</a>
   <a href="#news">Portfolio</a>
   <a href="#contact">Contact</a>
-  <div class="dropdown">
-    <button class="dropbtn">Dropdown 
+  <div class="Contact">
+    <button class="Contact">Dropdown 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="#">David</a>
+      <a href="#">Dani</a>
+      <a href="#">Ian</a>
+      <a href="#">Christine</a>
     </div>
   </div> 
   <a href="#about">About</a>
