--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   
 <div class="header">
-  <h1>Test Header</h1>
+  <h1>Hello Shawn</h1>
   <p></p>
 </div>
 
@@ -126,7 +126,7 @@ body {margin:0;font-family:Arial}
 </style>
 </head>
 <body>
-
+<!-- Nav Bar sourced from w3schools. Section by Ian Wright -->
 <div class="topnav" id="myTopnav">
   <a href="#home" class="active">Home</a>
   <a href="#news">About Us</a>
