--- a/index.html
+++ b/index.html
@@ -18,134 +18,28 @@
   <p></p>
 </div>
 
-<style>
-body {margin:0;font-family:Arial}
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 17px;    
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child), .dropdown .dropbtn {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .topnav.responsive .dropdown {float: none;}
-  .topnav.responsive .dropdown-content {position: relative;}
-  .topnav.responsive .dropdown .dropbtn {
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
-}
-</style>
 </head>
 <body>
+
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright -->
 <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">About Us</a>
-  <a href="#news">Drone Services</a>
-  <a href="#news">GIS Services</a>
-  <a href="#news">Portfolio</a>
-  <a href="#contact">Contact</a>
-  <div class="Contact">
-    <button class="Contact">Dropdown 
+  <a href="index" class="active">Home</a>
+  <a href="about">About Us</a>
+  <a href="services">GIS Services</a>
+  <a href="port">Portfolio</a>
+  <a href="contact">Contact</a>
+  <div class="about">
+   <!-- <button class="about">Dropdown 
       <i class="fa fa-caret-down"></i>
-    </button>
+    </button> -->
     <div class="dropdown-content">
-      <a href="#">David</a>
-      <a href="#">Dani</a>
-      <a href="#">Ian</a>
-      <a href="#">Christine</a>
+      <a href="about">Dani</a>
+      <a href="about">Ian</a>
+      <a href="about">Christine</a>
     </div>
   </div> 
-  <a href="#about">About</a>
+  <a href="#about">About Us</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 
