--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>WrightGIS Consulting</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
+<link type="text/css" rel="stylesheet" href="stylesheets/stylesheet.css" />
   
 </head>
 <body>
