--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
   <a href="services">GIS Services</a>
   <a href="port">Portfolio</a>
   <a href="contact">Contact</a>
-  <div class="about">
-   <!-- <button class="about">Dropdown 
+  <!--<div class="about">
+    <button class="about">Dropdown 
       <i class="fa fa-caret-down"></i>
-    </button> -->
+    </button> 
     <div class="dropdown-content">
       <a href="about">Dani</a>
       <a href="about">Ian</a>
       <a href="about">Christine</a>
     </div>
-  </div> 
+  </div> -->
   <a href="#about">About Us</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
