--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <a href="about">Ian</a>
       <a href="about">Christine</a>
     </div>
-  </div> -->
-  <a href="#about">About Us</a>
+  </div> 
+  <a href="#about">About Us</a> -->
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 
