--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <a href="about">Christine</a>
     </div>
   </div> 
-  <a href="#about">About Us</a> 
+  <a href="#about">About Us</a> -->
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-</div>  -->
+</div>  
 
 
 <script>
