--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link type="text/css" rel="stylesheet" href="christinelacanilao.github.io/stylesheet.css" />
+<link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  
   
 </head>
 <body>
@@ -41,7 +42,7 @@
 </div>  
 
 
-<script>
+<!--<script>
 function myFunction() {
   var x = document.getElementById("myTopnav");
   if (x.className === "topnav") {
@@ -50,7 +51,7 @@ function myFunction() {
     x.className = "topnav";
   }
 }
-</script>
+</script> -->
 
 </body>
 </html>
