--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>  
 
-
+<script src="javascript.js"></script>
 <!--<script>
 function myFunction() {
   var x = document.getElementById("myTopnav");
