--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link type="text/css" rel="stylesheet" href="christinelacanilao.github.io/stylesheet.css" />
-<link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  
+<!-- <link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  -->
   
 </head>
 <body>
