--- a/about.html
+++ b/about.html
@@ -1,1 +1,73 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>WrightGIS Consulting</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link type="text/css" rel="stylesheet" href="christinelacanilao.github.io/stylesheet.css" />
+<!-- <link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  -->
+  
+</head>
+<body>
+ 
+
+
+</head>
+<body>
+
+<!-- Nav Bar sourced from w3schools. Section by Ian Wright -->
+<div class="topnav" id="myTopnav">
+  <a href="index" class="active">Home</a>
+  <a href="about">About Us</a>
+  <a href="services">GIS Services</a>
+  <a href="port">Portfolio</a>
+  <a href="contact">Contact</a>
+  <!--<div class="about">
+    <button class="about">Dropdown 
+      <i class="fa fa-caret-down"></i>
+    </button> 
+    <div class="dropdown-content">
+      <a href="about">Dani</a>
+      <a href="about">Ian</a>
+      <a href="about">Christine</a>
+    </div>
+  </div> 
+  <a href="#about">About Us</a> -->
+  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+</div>  
+
+<script src="javascript.js"></script>
+<!--<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script> -->
+
+</body>
+</html>
+
+<div class="row">
+  <div class="column">
+    <h2>Column</h2>
+    <p> </p>
+  </div>
+  
+  <div class="column">
+    <h2>Column</h2>
+    <p>  </p>
+  </div>
+  
+  <div class="column">
+    <h2></h2>
+    <p></p>
+  </div>
+</div>
+
+</body>
+</html>
