--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
 
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright -->
 <div class="topnav" id="myTopnav">
-  <a href="index" class="active">Home</a>
-  <a href="about">About Us</a>
+  <a href="index">Home</a>
+  <a href="about" class="active">About Us</a>
   <a href="services">GIS Services</a>
   <a href="port">Portfolio</a>
   <a href="contact">Contact</a>
