--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
 <div class="topnav" id="myTopnav">
-  <a href="index">Home</a>
+  <a href="index" class="active">Home</a>
   <a href="about">About Us</a>
   <a href="services">GIS Services</a>
   <a href="port">Portfolio</a>
