--- a/about.html
+++ b/about.html
@@ -23,31 +23,12 @@
   <a href="services">GIS Services</a>
   <a href="port">Portfolio</a>
   <a href="contact">Contact</a>
-  <!--<div class="about">
-    <button class="about">Dropdown 
-      <i class="fa fa-caret-down"></i>
-    </button> 
-    <div class="dropdown-content">
-      <a href="about">Dani</a>
-      <a href="about">Ian</a>
-      <a href="about">Christine</a>
-    </div>
-  </div> 
-  <a href="#about">About Us</a> -->
-  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+  
+ <!-- <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> -->
 </div>  
 
 <script src="javascript.js"></script>
-<!--<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script> -->
+
 
 </body>
 </html>
