--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <a href="port">Portfolio</a>
   <a href="contact">Contact</a>
  
- <!-- <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> -->
+   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> 
 </div>  
 
 <script src="javascript.js"></script>
