--- a/port.html
+++ b/port.html
@@ -1,1 +1,54 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>WrightGIS Consulting</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link type="text/css" rel="stylesheet" href="christinelacanilao.github.io/stylesheet.css" />
+<!-- <link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  -->
+  
+</head>
+<body>
+ 
+
+
+</head>
+<body>
+
+<!-- Nav Bar sourced from w3schools. Section by Ian Wright --> 
+<div class="topnav" id="myTopnav">
+  <a href="index">Home</a>
+  <a href="about">About Us</a>
+  <a href="services">GIS Services</a>
+  <a href="port"class="active">Portfolio</a>
+  <a href="contact">Contact</a>
+  
+ <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> 
+</div>  
+
+<script src="javascript.js"></script>
+
+
+</body>
+</html>
+
+<div class="row">
+  <div class="column">
+    <h2>Column</h2>
+    <p> </p>
+  </div>
+  
+  <div class="column">
+    <h2>Column</h2>
+    <p>  </p>
+  </div>
+  
+  <div class="column">
+    <h2></h2>
+    <p></p>
+  </div>
+</div>
+
+</body>
+</html>
