--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 
-<!-- and -->
-
-<!-- and -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,13 +12,29 @@
 </head>
 <body>
  
-
+<div class="header">
+  <h1>Move this</h1>
+  <p></p>
+</div>
 
 </head>
 <body>
 
+  example
+ <div class="header">
+  <a href="#default" class="logo">CompanyLogo</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+</div> 
+  
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
-<div class="topnav" id="myTopnav">
+<div class="logo">
+  <IMG SRC="hostinger-logo.png" ALT="some text" WIDTH=600 HEIGHT=400>
+    <img src="IMG_2709.png" class="image1" alt="IMG_2708">
+  <div class="topnav" id="myTopnav">
   <a href="index" class="active">Home</a>
   <a href="about">About Us</a>
   <a href="services">GIS Services</a>
@@ -29,8 +42,8 @@
   <a href="contact">Contact</a>
  
    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> 
-</div>  
-
+ </div>  
+  </div>
 
   
 <script src="javascript.js"></script>
