--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   example
  <div class="header">
-  <a href="#default" class="logo">CompanyLogo</a>
+  <a href="Screenshot (282).png" class="logo">CompanyLogo</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
