--- a/index.html
+++ b/index.html
@@ -20,21 +20,22 @@
 </head>
 <body>
 
-  example
+<!--  example
  <div class="header">
-  <a href="Screenshot (282).png" class="logo">CompanyLogo</a>
+  <a href="cdilogo.png" class="logo">CompanyLogo</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
     <a href="#about">About</a>
   </div>
-</div> 
+</div> -->
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
-<div class="logo">
-  <IMG SRC="hostinger-logo.png" ALT="some text" WIDTH=600 HEIGHT=400>
-    <img src="IMG_2709.png" class="image1" alt="IMG_2708">
-  <div class="topnav" id="myTopnav">
+<div>
+    <img src="cdilogo.png" class="logo">
+</div>
+  
+<div class="topnav" id="myTopnav">
   <a href="index" class="active">Home</a>
   <a href="about">About Us</a>
   <a href="services">GIS Services</a>
@@ -42,8 +43,8 @@
   <a href="contact">Contact</a>
  
    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> 
- </div>  
-  </div>
+</div>  
+  
 
   
 <script src="javascript.js"></script>
