--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <!--  example
  <div class="header">
-  <a href="cdilogo.png" class="logo">CompanyLogo</a>
+  <a href="cdilogo1.png" class="logo">CompanyLogo</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
