--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <!--  example
  <div class="header">
-  <a href="cdilogo1.png" class="logo">CompanyLogo</a>
+  <a href="cdilogo2.png" class="logo">CompanyLogo</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
@@ -27,7 +27,7 @@
 </div> -->
   
   
-<img src="cdilogo.png" class="logo">
+<img src="cdilogo2.png" class="logo">
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
 
