--- a/services.html
+++ b/services.html
@@ -16,17 +16,19 @@
 </head>
 <body>
 
+<img src="cdilogo2.png" class="logo">
+  
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
+
 <div class="topnav" id="myTopnav">
-  <a href="index">Home</a>
-  <a href="about">About Us</a>
-  <a href="services" class="active">GIS Services</a>
-  <a href="port">Portfolio</a>
   <a href="contact">Contact</a>
- 
+  <a href="port">Portfolio</a>
+  <a href="services">GIS Services</a>
+  <a href="about">About Us</a>
+  <a href="index" class="active">Home</a>
+
    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> 
 </div>  
-
 
   
 <script src="javascript.js"></script>
