--- a/about.html
+++ b/about.html
@@ -16,13 +16,16 @@
 </head>
 <body>
 
-<!-- Nav Bar sourced from w3schools. Section by Ian Wright --> 
+<img src="cdilogo2.png" class="logo">
+  
+<!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
+
 <div class="topnav" id="myTopnav">
-  <a href="index">Home</a>
-  <a href="about" class="active">About Us</a>
-  <a href="services">GIS Services</a>
-  <a href="port">Portfolio</a>
   <a href="contact">Contact</a>
+  <a href="port">Portfolio</a>
+  <a href="services">GIS Services</a>
+  <a href="about">About Us</a>
+  <a href="index" class="active">Home</a>
   
  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> 
 </div>  
