--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
   <a href="contact">Contact</a>
   <a href="port">Portfolio</a>
   <a href="services">GIS Services</a>
-  <a href="about">About Us</a>
-  <a href="index" class="active">Home</a>
+  <a href="about" class="active">About Us</a>
+  <a href="index">Home</a>
   
  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> 
 </div>  
