--- a/services.html
+++ b/services.html
@@ -23,9 +23,9 @@
 <div class="topnav" id="myTopnav">
   <a href="contact">Contact</a>
   <a href="port">Portfolio</a>
-  <a href="services">GIS Services</a>
+  <a href="services" class="active">GIS Services</a>
   <a href="about">About Us</a>
-  <a href="index" class="active">Home</a>
+  <a href="index">Home</a>
 
    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> 
 </div>  
