--- a/index.html
+++ b/index.html
@@ -26,10 +26,20 @@
   </div>
 </div> -->
   
+<div class="row">
+  <div class="column">
+    <img src="cdilogo2.png">
+  </div>
+  <div class="column">
+    <img src="GISmap.png>
+  </div>
+</div>  
   
-<img src="cdilogo2.png" class="logo">
-<img src="GISmap.png" class="headermap"> 
-<!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
+  
+<!--<img src="cdilogo2.png" class="logo">
+<img src="GISmap.png" class="headermap"> -->
+  
+<!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a> -->
 
   
 <div class="topnav" id="myTopnav">
