--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 </div>  
   
   
-<!--<img src="cdilogo2.png" class="logo">
-<img src="GISmap.png" class="headermap"> -->
+<!-- <img src="cdilogo2.png" class="logo"> -->
+<!-- <img src="GISmap.png" class="headermap"> -->
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a> -->
 
