--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   
 <div class="row">
   <div class="column">
-    <img src="cdilogo2.png">
+    <img src="cdilogo2.png" style="width:100%">
   </div>
   <div class="column">
-    <img src="GISmap.png>
+    <img src="GISmap.png" style="width:100%">
   </div>
 </div>  
   
