--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   </div>
 </div> -->
   
-<div class="row">
-  <div class="column">
+<div class="clearfix">
+  <div class="box">
     <img src="cdilogo3.png" style="width:90%">
   </div>
-  <div class="column">
+  <div class="box">
     <img src="GISmap.png" style="width:110%">
   </div>
 </div>  
