--- a/index.html
+++ b/index.html
@@ -26,18 +26,11 @@
   </div>
 </div> -->
   
-<div class="clearfix">
-  <div class="box">
-    <img src="cdilogo3.png" style="width:90%">
-  </div>
-  <div class="box">
-    <img src="GISmap.png" style="width:110%">
-  </div>
-</div>  
+
   
   
-<!-- <img src="cdilogo2.png" class="logo"> -->
-<!-- <img src="GISmap.png" class="headermap"> -->
+ <img src="cdilogo2.png" class="logo"> 
+ <img src="GISmap.png" class="headermap"> 
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a> -->
 
