--- a/home.html
+++ b/home.html
@@ -79,23 +79,21 @@
 </div>
 
 </body>
-<div class="footer-background">
-    <div class="footer">  
-        <div class="leftside-footer">			
-            <div class="text">
-                  <h1> CDI GIS Consulting </h1>
-                    <ul>
-                        <li><b>CDI GIS Consulting Group –&nbsp; </b></li>
-                        <li>Phone (647) 225-1397</li>
-                        <li>Fax (905) 473-4597</li>
-                    </ul> 
-            </div>
-        </div> 
-    </div>
-    <div class="right-footer">
-        <a href="#"><img src="cdilogo.png" alt=""></a> 
-    </div>       
+<div class="footer">  
+    <div class="leftside-footer">			
+        <div class="text">
+            <h1> CDI GIS Consulting </h1>
+            <ul>
+                <li><b>CDI GIS Consulting Group &nbsp; </b></li>
+                <li>Phone (647) 225-1397</li>
+                <li>Fax (905) 473-4597</li>
+            </ul> 
+        </div>
+    </div> 
 </div>
-<div class="footer-bg-strip"></div>
+<div class="rightside-footer">
+
+    <a href="#"><img src="cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" ></a> 
+</div>       
 <!-- Footer sourced from georginaisland.com. Section by Danielle Cotton-->
 </html>
