--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   
 <div class="topnav" id="myTopnav">
-  <a href="contact">Contact</a>
+  <a href="contact">test</a>
   <a href="port">Portfolio</a>
   <a href="services">GIS Services</a>
   <a href="about">About Us</a>
