--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
   
  <img src="cdilogo2.png" class="logo"> 
- <img src="GISmap.png" class="headermap"> 
+ <!-- <img src="GISmap.png" class="headermap"> -->
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a> -->
 
