--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 </div> -->
   
 
-  
-  
+ <header>
  <img src="cdilogo2.png" class="logo"> 
+ </header>
+    
  <!-- <img src="GISmap.png" class="headermap"> -->
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a> -->
