--- a/services.html
+++ b/services.html
@@ -9,11 +9,7 @@
 <!-- <link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  -->
   
 </head>
-<body>
- 
 
-
-</head>
 <body>
 
 <img src="cdilogo2.png" class="logo">
@@ -29,30 +25,19 @@
 
    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> 
 </div>  
-
   
 <script src="javascript.js"></script>
 
+  <article>
+    <h1>London</h1>
+    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  </article>
+</section>
 
-</body>
-</html>
-
-<div class="row">
-  <div class="column">
-    <h2>Column</h2>
-    <p> </p>
-  </div>
-  
-  <div class="column">
-    <h2>Column</h2>
-    <p>  </p>
-  </div>
-  
-  <div class="column">
-    <h2></h2>
-    <p></p>
-  </div>
-</div>
+<footer>
+  <p>Footer</p>
+</footer>
 
 </body>
 </html>
