--- a/services.html
+++ b/services.html
@@ -29,9 +29,16 @@
 <script src="javascript.js"></script>
 
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <h1>Services:</h1>
+    <p>Address geocoding and reverse geocoding</p>
+    <p>Cartography and cartographic modeling</p>
+    <p>Data analysis, data output, and data production</p>
+    <p>Geostatistics</p>
+    <p>Routing for emergency and distribution services</p>
+    <p>Multi-criteria decision analysis</p>
+    <p>Topological modelling</p>
+    <p>Urban planning and design</p>
+    
   </article>
 </section>
 
