--- a/services.html
+++ b/services.html
@@ -30,14 +30,20 @@
 
   <article>
     <h1>Services:</h1>
-    <p>Address geocoding and reverse geocoding</p>
-    <p>Cartography and cartographic modeling</p>
-    <p>Data analysis, data output, and data production</p>
-    <p>Geostatistics</p>
-    <p>Routing for emergency and distribution services</p>
-    <p>Multi-criteria decision analysis</p>
-    <p>Topological modelling</p>
-    <p>Urban planning and design</p>
+    <p> Address geocoding and reverse geocoding</p>
+    <p> Cartography and cartographic modeling</p>
+    <p> Data analysis, data output, and data production</p>
+    <p> Geostatistics</p>
+    <p> Routing for emergency and distribution services</p>
+    <p> Multi-criteria decision analysis</p>
+    <p> Topological modelling</p>
+    <p> Urban planning and design</p>
+    <p> Drone mapping</p>
+    <p> Precision agriculture</p>
+    <p> NDVI prescription maps</p>
+    <p> Leaf area index maps</p>
+    <p> Soil moisture maps</p>
+    
     
   </article>
 </section>
