--- a/services.html
+++ b/services.html
@@ -43,8 +43,9 @@
     <p> NDVI prescription maps</p>
     <p> Leaf area index maps</p>
     <p> Soil moisture maps</p>
-    
-    
+    <p> Veriable rate datasets for agricultural equipment</p>
+    <p> Soil nutrient mapping </p>
+ 
   </article>
 </section>
 
