--- a/contact.html
+++ b/contact.html
@@ -282,9 +282,29 @@
         </div>
     </div>
     <!-- Inspired from https://www.studiopress.com/
-    "What People Are Saying" -->
+    "What People Are Saying" 
+    Flip cards from https://www.w3schools.com/howto/howto_css_flip_card.asp-->
     <div class="section-2"> <!--Contact Info-->
-
+        <div class="flip-card-Dani">
+            <img src="" alt="Avatar-Dani" style="width:300px;height:300px;">
+        </div>
+        <div class="flip-card-back-Dani">
+            <h1>Dani Cotton</h1>
+            <p>danielle.cotton@flemingcollege.ca</p>
+        </div>
+        <div class="flip-card-Christine">
+            <img src="" alt="Avatar-Christine" style="width:300px;height:300px;">
+        </div>
+        <div class="flip-card-back-Christine"></div>
+            <h1>Christine Lacanilao</h1>
+            <p>christineivy.lacanilao@flemingcollege.ca</p>
+            </div>
+        <div class="flip-card-Ian">
+            <img src="" alt="Avatar-Ian" style="width:300px;height:300px;">
+        <div class="flip-card-back-Ian" style="width:300px;height:300px;">
+            <h1>Ian Wright</h1>
+            <p>ian.wright@flemingcollege.ca</p>
+        </div>
     </div>
 
     <div class="section-3"> <!--Location-->
