--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 
 <div class="row">
   <div class="column">
-    <h2>Column</h2>
-    <p> </p>
+    <h2>Welcome!</h2>
+    <p>CDI Consulting is a geospatial consulting firm. We utilize drones and provide drone services to cater to your unique drone consulting needs!</p>
+    <p>Let our consultants help you along your </p>
   </div>
   
   <div class="column">
@@ -57,6 +58,32 @@
     <p></p>
   </div>
 </div>
-
+<footer>
+  <div class = footer-bg>
+      <div class="footer">  
+          <div class="leftside-footer">			
+              <div class="text">
+                  <h1> CDI GIS Consulting </h1>
+                  <ul>
+                      <li><b>CDI GIS Consulting Group.</b></li>
+                      <li>Phone (647) 225-1397</li>
+                      <li>info@CDIConsulting.com</li>
+                  </ul> 
+              </div>
+          </div> 
+      </div>
+      <div class="rightside-footer">
+          <a href="#"><img src="cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" ></a> 
+      </div>   
+  </div> 
+  <div class="footer-bottom-area">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 col-xs-12 text-center">© 2019 CDI Consulting. All Right Reserved. Website by CDI Group </div>
+									</div>
+			</div>
+		</div> 
+</footer>  
+<!-- Footer inspired by georginaisland.com and https://www.crmgismapping.ca/. Section by Danielle Cotton-->
 </body>
 </html>
