--- a/services.html
+++ b/services.html
@@ -29,12 +29,69 @@
 <script src="javascript.js"></script>
 
   <article>
-    <h1>London</h1>
+    <h1>Services</h1>
+    <div class="flex-container"> 
+       <div class="box">
+          Address geocoding and reverse geocoding
+
+          Cartography and cartographic modeling
+
+          Data analysis, data output, and data production
+
+          Geostatistics
+
+          Routing for emergency and distribution services
+
+          Multi-criteria decision analysis
+
+          Topological modelling
+
+          Urban planning and design
+        <div class="box">
+          Drone mapping
+
+          Precision agriculture
+
+          NDVI prescription maps
+
+          Leaf area index maps
+
+          Soil moisture maps
+         </div>
     <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
     <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
   </article>
 </section>
+Services:
+Address geocoding and reverse geocoding
 
+Cartography and cartographic modeling
+
+Data analysis, data output, and data production
+
+Geostatistics
+
+Routing for emergency and distribution services
+
+Multi-criteria decision analysis
+
+Topological modelling
+
+Urban planning and design
+
+Drone mapping
+
+Precision agriculture
+
+NDVI prescription maps
+
+Leaf area index maps
+
+Soil moisture maps
+
+Veriable rate datasets for agricultural equipment
+
+Soil nutrient mapping
   <div class="footer">  
     <div class="leftside-footer">			
         <div class="text">
