add contact the team header

--- a/contact.html
+++ b/contact.html
@@ -303,6 +303,7 @@
     "What People Are Saying" 
     Flip cards from https://www.w3schools.com/howto/howto_css_flip_card.asp-->
     <div class="section-2"> <!--Contact Info-->
+        <h2>Contact the Team</h2>
         <div class="flip-card-Dani">
             <img src="" alt="Avatar-Dani" style="width:300px;height:300px;">
         </div>
