--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="column">
     <h2>Welcome!</h2>
     <p>CDI Consulting is a geospatial consulting firm. We utilize drones and provide drone services to cater to your unique drone consulting needs!</p>
-    <p>Let our consultants help you along your </p>
+    <p>Let our consultants help you along your unique journey.</p>
   </div>
   
   <div class="column">
