--- a/services.html
+++ b/services.html
@@ -31,22 +31,24 @@
     <h1>Services</h1>
     <div class="flex-container"> 
        <div class="box">
-          Address geocoding and reverse geocoding
+         <p>Address geocoding and reverse geocoding</p>
 
-          Cartography and cartographic modeling
+         <p>Cartography and cartographic modeling</p>
 
-          Data analysis, data output, and data production
+         <p>Data analysis, data output, and data production</p>
 
-          Geostatistics
+         <p>Geostatistics</p>
 
-          Routing for emergency and distribution services
+         <p>Routing for emergency and distribution services</p>
 
-          Multi-criteria decision analysis
+         <p>Multi-criteria decision analysis</p>
 
-          Topological modelling
+         <p>Topological modelling</p>
 
-          Urban planning and design
+         <p>Urban planning and design</p>
+         
         <div class="box">
+          
           Drone mapping
 
           Precision agriculture
