testing contact/stylesheet

--- a/contact.html
+++ b/contact.html
@@ -285,6 +285,7 @@
     "What People Are Saying" 
     Flip cards from https://www.w3schools.com/howto/howto_css_flip_card.asp-->
     <div class="section-2"> <!--Contact Info-->
+        <h2>Contact the Team</h2>
         <div class="flip-card-Dani">
             <img src="" alt="Avatar-Dani" style="width:300px;height:300px;">
         </div>
@@ -298,9 +299,10 @@
         <div class="flip-card-back-Christine"></div>
             <h1>Christine Lacanilao</h1>
             <p>christineivy.lacanilao@flemingcollege.ca</p>
-            </div>
+        </div>
         <div class="flip-card-Ian">
             <img src="" alt="Avatar-Ian" style="width:300px;height:300px;">
+        </div>
         <div class="flip-card-back-Ian" style="width:300px;height:300px;">
             <h1>Ian Wright</h1>
             <p>ian.wright@flemingcollege.ca</p>
