--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<div class="content">
     <!--Inspired from 
     https://www.farmersedge.ca/contact/
     https://www.w3schools.com/howto/howto_css_contact_section.asp-->
@@ -286,24 +287,24 @@
     Flip cards from https://www.w3schools.com/howto/howto_css_flip_card.asp-->
     <div class="section-2"> <!--Contact Info-->
         <h2>Contact the Team</h2>
-        <div class="flip-card-Dani">
+        <div class="flip-card-front">
             <img src="" alt="Avatar-Dani" style="width:300px;height:300px;">
         </div>
-        <div class="flip-card-back-Dani">
+        <div class="flip-card-back">
             <h1>Dani Cotton</h1>
             <p>danielle.cotton@flemingcollege.ca</p>
         </div>
-        <div class="flip-card-Christine">
+        <div class="flip-card-front">
             <img src="" alt="Avatar-Christine" style="width:300px;height:300px;">
         </div>
-        <div class="flip-card-back-Christine"></div>
+        <div class="flip-card-back"></div>
             <h1>Christine Lacanilao</h1>
             <p>christineivy.lacanilao@flemingcollege.ca</p>
         </div>
-        <div class="flip-card-Ian">
+        <div class="flip-card-front">
             <img src="" alt="Avatar-Ian" style="width:300px;height:300px;">
         </div>
-        <div class="flip-card-back-Ian" style="width:300px;height:300px;">
+        <div class="flip-card-back" style="width:300px;height:300px;">
             <h1>Ian Wright</h1>
             <p>ian.wright@flemingcollege.ca</p>
         </div>
@@ -312,4 +313,5 @@
     <div class="section-3"> <!--Location-->
 
     </div>
+</div>
 </body>
