--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
 			</div>
 		</div> 
 </footer>  
-<!-- Footer inspired by georginaisland.com and https://www.crmgismapping.ca/. Section by Danielle Cotton-->
+<!-- Footer inspired by https://codepen.io/hexagoncircle/pen/yvxyPW. Section by Danielle Cotton-->
 </body>
 </html>
