--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="column">
     <h2>Our Mission</h2>
     <p> We want our customers to get the most out of their experience.</p>
-    <p> This means working closely with our team of professionals to come to a desired outcome. </p>
+    <p> This means working closely with our team of professionals to reach your desired outcome. </p>
     <p> Your happiness is our guarantee.</p>
     <img src="https://miro.medium.com/max/2000/1*HMYT3_q64V6vOsO2toogig.png" width="400" height="250">
   </div>
@@ -63,31 +63,29 @@
   </div>
 </div>
 <footer>
-  <div class = footer-bg>
-      <div class="footer">  
-          <div class="leftside-footer">			
-              <div class="text">
-                  <h1> CDI GIS Consulting </h1>
-                  <ul>
-                      <li><b>CDI GIS Consulting Group.</b></li>
-                      <li>Phone (647) 225-1397</li>
-                      <li>info@CDIConsulting.com</li>
-                  </ul> 
-              </div>
-          </div> 
+    <div class="footer">  
+        <div class="leftside-footer">			
+          <div class="text">
+            <h1> CDI GIS Consulting </h1>
+              <ul>
+                <li><b>CDI GIS Consulting Group.</b></li>
+                <li>Phone (647) 225-1397</li>
+                <li>info@CDIConsulting.com</li>
+              </ul> 
+          </div>
+        </div> 
       </div>
-      <div class="rightside-footer">
-          <img src="cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" >
-      </div>   
-  </div> 
-  <div class="footer-bottom-area">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12 col-xs-12 text-center">© 2019 CDI Consulting. All Right Reserved. Website by CDI Group </div>
-									</div>
-			</div>
-		</div> 
+        <div class="rightside-footer">
+            <img src="cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" >
+        </div>    
+        <div class="footer-bottom-area">
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-12 col-xs-12 text-center">© 2019 CDI Consulting. All Right Reserved. Website by CDI Group </div>
+                        </div>
+            </div>
+          </div>
 </footer>  
-<!-- Footer inspired by https://codepen.io/hexagoncircle/pen/yvxyPW. Section by Danielle Cotton-->
+<!-- Footer inspired by https://codepen.io/hexagoncircle/pen/yvxyPW, georginaisland.com and https://www.crmgismapping.ca/projects/. Section by Danielle Cotton-->
 </body>
 </html>
