--- a/port.html
+++ b/port.html
@@ -52,6 +52,33 @@
     <p></p>
   </div>
 </div>
-
+<footer>
+    
+  <div class="footer">  
+    <div class="leftside-footer">			
+      <div class="text">
+        <h1> CDI GIS Consulting </h1>
+          <ul>
+            <li><b>CDI GIS Consulting Group.</b></li>
+            <li>Phone (647) 225-1397</li>
+            <li>info@CDIConsulting.com</li>
+          </ul> 
+      </div>
+    </div> 
+  </div>
+        <div class="rightside-footer">
+            <img src="cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" >
+        </div>   
+    </div> 
+    <div class="footer-bottom-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12 col-xs-12 text-center">© 2019 CDI Consulting. All Right Reserved. Website by CDI Group </div>
+                    </div>
+        </div>
+      
+  </footer>  
+  <!-- Footer inspired by https://codepen.io/hexagoncircle/pen/yvxyPW, georginaisland.com and https://www.crmgismapping.ca/projects/. Section by Danielle Cotton-->
+  
 </body>
 </html>
