just organizing text

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <h4>Dani Cotton</h4>
 		<img src="Images/Dani.jpg" alt="Dani" style="width:20%">
     	<div class="container">
-        	<p class="title">President &amp; Co-founder</p>
+        	<p class="title">Co-founder &amp; President</p>
         	<p>Dani completed her GIS certificate from Fleming College and co-founded the company.</p>
         	<p>danielle.cotton@CDIConsulting.com</p>
 		</div>
