--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,27 @@
 <html lang="en">
 
 <head>
-    <title>Lacanilao-Contact</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">           
-</head>
+<title>CDI GIS Consulting</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link type="text/css" rel="stylesheet" href="christinelacanilao.github.io/stylesheet.css" />
+<!-- <link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  -->
+
+
+<img src="cdilogo2.png" class="logo">
+  
+<!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
+
+<div class="topnav" id="myTopnav">
+  <a href="contact" class="active">Contact</a>
+  <a href="port">Portfolio</a>
+  <a href="services">GIS Services</a>
+  <a href="about" >About Us</a>
+  <a href="index">Home</a>
+  
+ <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> 
+</div>  
+<script src="javascript.js"></script>
 
 <body>
 <div class="content">
