--- a/port.html
+++ b/port.html
@@ -43,8 +43,12 @@
   </div>
   
   <div class="column">
-    <h2>Column</h2>
-    <p>  </p>
+    <h2>Recent Projects</h2>
+    <h3>City of Nanaimo – Roundabout</h3>
+    <p> The City of Nanaimo Engineering and Public Works Department tasked CDI to use our UAV technology to capture high definition video of traffic flow in a newly constructed “roundabout” during peak morning and afternoon time periods. CDI retains all necessary Transport Canada permissions for drone operation. Our UAV pilot captured over 1.5 hours of video over 9 total flights while ground support staff observed for possible safety concerns and directed foot traffic away from the flight path.
+
+        Output files were provided to the City of Nanaimo for the purpose of reviewing traffic patterns and adjusting for possible safety concerns within the roundabout. </p>
+    <!-- Example of portfolio projects used from https://www.crmgismapping.ca/projects/-->
   </div>
   
   <div class="column">
@@ -66,17 +70,16 @@
       </div>
     </div> 
   </div>
-        <div class="rightside-footer">
-            <img src="cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" >
-        </div>   
-    </div> 
+    <div class="rightside-footer">
+        <img src="cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" >
+    </div>    
     <div class="footer-bottom-area">
         <div class="container">
           <div class="row">
             <div class="col-sm-12 col-xs-12 text-center">© 2019 CDI Consulting. All Right Reserved. Website by CDI Group </div>
                     </div>
         </div>
-      
+      </div>
   </footer>  
   <!-- Footer inspired by https://codepen.io/hexagoncircle/pen/yvxyPW, georginaisland.com and https://www.crmgismapping.ca/projects/. Section by Danielle Cotton-->
   
