--- a/port.html
+++ b/port.html
@@ -38,12 +38,14 @@
 
 <div class="row">
   <div class="column">
-    <h2>Column</h2>
-    <p> </p>
+    <h2>Recent Agriculture Innovations</h2>
+    <p> CDI Consulting Releases the Industry’s First Automatic Crop Health Change Detection Tool Highlighting the ROI of Daily Satellite Imagery</p>
+    <img src="Crop-Health-Change-Notification-Release-Blog-Post-2-1080x675.jpg" width="500" height="300">
+    <!-- Example of portfolio projects used from https://www.farmersedge.ca/farmers-edge-releases-the-industrys-first-automatic-crop-health-change-detection-tool-highlighting-the-roi-of-daily-satellite-imagery/-->
   </div>
   
   <div class="column">
-    <h2>Recent Projects</h2>
+    <h2>Recent Mapping Projects</h2>
     <h3>City of Nanaimo – Roundabout</h3>
     <p> The City of Nanaimo Engineering and Public Works Department tasked CDI to use our UAV technology to capture high definition video of traffic flow in a newly constructed “roundabout” during peak morning and afternoon time periods. CDI retains all necessary Transport Canada permissions for drone operation. Our UAV pilot captured over 1.5 hours of video over 9 total flights while ground support staff observed for possible safety concerns and directed foot traffic away from the flight path.
 
