adding folder and sorting images

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 		<img src="Images/Dani.jpg" alt="Dani" style="width:20%">
     	<div class="container">
         	<p class="title">Co-founder &amp; President</p>
-        	<p>Dani completed her GIS certificate from Fleming College and co-founded the company.</p>
+        	<p>Dani completed her GIS certificate from Fleming College and co-founded the company her peers.</p>
         	<p>danielle.cotton@CDIConsulting.com</p>
 		</div>
 		</div>
