--- a/about.html
+++ b/about.html
@@ -31,11 +31,11 @@
 	
 	<div>
 		<div class="card">
-        <h4>Dani Cotton</h4>
+        <h4>Danielle Cotton</h4>
 		<img src="Images/Dani.jpg" alt="Dani" style="width:20%">
     	<div class="container">
         	<p class="title">Co-founder &amp; President</p>
-        	<p>Dani completed her GIS certificate from Fleming College and co-founded the company her peers.</p>
+        	<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
         	<p>danielle.cotton@CDIConsulting.com</p>
 		</div>
 		</div>
