--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 	</div>
 		<div class="card">
 		<h4>Ian Wright</h4>
-		<img src="Images/Ian.jpg" alt="Ian" style="width:20%">
+		<img src="Ian.jpg" alt="Ian" style="width:20%">
 		<div class="container">
 			<p class="title">Co-founder &amp; Consultant</p>
 			<p>Ian completed his GIS certificate from Fleming College and co-founded the company. He joined the company as a consultant.</p>
