--- a/about.html
+++ b/about.html
@@ -24,6 +24,10 @@
 </div>  
 <script src="javascript.js"></script>
 
+<div class="header">
+	<h3>ABOUT CDI CONSULTING</h3>
+	<h1>Our goal as a company is to provide a </h1>
+</div>
 <!-- This section has each member on it with their role, a blurb, and a contact email to reach them.-->
 <div class="content">
 	
