--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         </div>
         <div class="row">
             <div class="column">
-            <img src="/w3images/map.jpg" style="width:100%">
+            <img src="drone-background.jpg" style="width:100%">
             </div>
             <div class="column">
                 <form action="/action_page.php">
@@ -45,7 +45,7 @@
                     <label for="email">Email</label>           
                     <input type="text" id="email" name="email" placeholder="Email">
                     <label for="country">Country</label>
-                    <select id="country" name="country">                    <!-- Option value list grabbed from https://gist.github.com/danrovito/977bcb97c9c2dfd3398a-->
+                    <select id="country" name="country" placeholder="Select one:">                    <!-- Option value list grabbed from https://gist.github.com/danrovito/977bcb97c9c2dfd3398a-->
                         <option value="Afghanistan">Afghanistan</option>
                         <option value="Åland Islands">Åland Islands</option>
                         <option value="Albania">Albania</option>
