--- a/about.html
+++ b/about.html
@@ -26,9 +26,11 @@
 
 <!-- This section should have the name and goal. Inspired from https://www.fitnessblender.com/page/about-fitness-blender-->
 <div class="content">
-	<div class="box-1">
-		<h3>ABOUT CDI GSI CONSULTING</h3>
-		<h1>Our goal is to make GIS services attainable, affordable, and approachable.</h1>
+	<div>
+		<div class="box-1">
+			<h3>ABOUT CDI GSI CONSULTING</h3>
+			<h1>Our goal is to make GIS services attainable, affordable, and approachable.</h1>
+		</div>
 	</div>
 </div>
 
@@ -60,7 +62,7 @@
 	<div>
 		<div class="card">
         <h4>Danielle Cotton</h4>
-		<img src="Dani.jpg" alt="Dani" style="width:20%">
+		<img src="Dani.jpg" alt="Danielle" style="width:20%">
     	<div class="container">
         	<p class="title">Co-founder &amp; President</p>
         	<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
