--- a/about.html
+++ b/about.html
@@ -24,27 +24,42 @@
 </div>  
 <script src="javascript.js"></script>
 
+<!-- Parallex Effect, inspired from https://www.w3schools.com/howto/howto_css_parallax.asp-->
+<div class="parallax-1">
+	<div class="caption">
+		<span class="border">CDI GIS CONSULTING</span>
+	</div>
+</div>
+
 <!-- This section should have the name and goal. Inspired from https://www.fitnessblender.com/page/about-fitness-blender-->
 <div class="content">
 	<div>
-		<div class="box-1">
-			<h3>ABOUT CDI GSI CONSULTING</h3>
-			<h1>Our goal is to make GIS services attainable, affordable, and approachable.</h1>
-		</div>
+		<h3>ABOUT CDI GSI CONSULTING</h3>
+		<h1>Our goal is to make GIS services attainable, affordable, and approachable.</h1>
 	</div>
+</div>
+
+<!-- Another image to break up the effect -->
+<div class="parallax-2">
+
 </div>
 
 <!-- This section should go in a little more detail about the company-->
 <div class="content">
-	<div class="box-1">
+	<div>
 		<h2>Created to help your company achieve their goals.</h2>
 		<p>We believe that GIS should be accessible to everyone, regardless of the size of the company. That's why we offer affordable pricing for various GIS services.</p>
 	</div>
 </div>
 
+<!-- Another image to break up the effect -->
+<div class="parallax-3">
+
+</div>
+
 <!-- This section should have a small section to preface how it all started. -->
 <div class="content">
-	<div class="box-1">
+	<div>
 		<h2>A little about who we are and how it all got started</h2>
 		<p>CDI GSI Consulting was created by just three people; three students who joined forces for a project in a class called "Web Design and Programming". 
 			They felt that GIS and drones were pretty cool so why not make a company for it? Plus, they all had a nifty Basics Operations license to fly drones.
@@ -53,6 +68,10 @@
 	</div>
 </div>
 
+<!-- Another image to break up the effect -->
+<div class="parallax-4">
+
+</div>
 
 <!-- This section has each member on it with their role, a blurb, and a contact email to reach them.-->
 <div class="content">
@@ -72,7 +91,7 @@
     <div>
 		<div class="card">
         <h4>Christine Lacanilao</h4>
-		<img src="Christine.jpg" alt="Christine" style="width:20%">
+		<img src="Christine.gif" alt="Christine" style="width:20%">
 		<div class="container">
 			<p class="title">Co-founder &amp; Consultant</p>
 			<p>Christine completed her GIS certificate from Fleming College and co-founded the company. She joined the company as a consultant.</p>
