--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
     <div>
 		<div class="card">
         <h4>Christine Lacanilao</h4>
-		<img src="Christine.gif" alt="Christine" style="width:20%">
+		<img src="Images/Christine.gif" alt="Christine" style="width:20%">
 		<div class="container">
 			<p class="title">Co-founder &amp; Consultant</p>
 			<p>Christine completed her GIS certificate from Fleming College and co-founded the company. She joined the company as a consultant.</p>
@@ -101,7 +101,7 @@
 	</div>
 		<div class="card">
 		<h4>Ian Wright</h4>
-		<img src="Ian.jpg" alt="Ian" style="width:20%">
+		<img src="Images/Ian.jpg" alt="Ian" style="width:20%">
 		<div class="container">
 			<p class="title">Co-founder &amp; Consultant</p>
 			<p>Ian completed his GIS certificate from Fleming College and co-founded the company. He joined the company as a consultant.</p>
