minor source image edits

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   
  <header>
- <img src="cdilogo2.png" class="logo"> 
+ <img src="Images/cdilogo2.png" class="logo"> 
  </header>
     
  <!-- <img src="GISmap.png" class="headermap"> -->
@@ -76,7 +76,7 @@
         </div> 
       </div>
         <div class="rightside-footer">
-            <img src="cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" >
+            <img src="Images/cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" >
         </div>    
         <div class="footer-bottom-area">
             <div class="container">
