--- a/port.html
+++ b/port.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<img src="cdilogo2.png" class="logo">
+<img src="Images/cdilogo2.png" class="logo">
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
   
