--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<img src="cdilogo2.png" class="logo">
+<img src="Images/cdilogo2.png" class="logo">
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
 
@@ -65,7 +65,7 @@
 </div>
 <div class="rightside-footer">
 
-    <a href="#"><img src="cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" ></a> 
+    <a href="#"><img src="Images/cdilogo.png" alt="CompanyLogo" width="200" height="100" align="right" ></a> 
 </div>       
 <!-- Footer sourced from georginaisland.com. Section by Danielle Cotton-->
   
