--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <!-- <link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  -->
 
 
-<img src="cdilogo2.png" class="logo">
+<img src="Images/cdilogo2.png" class="logo">
   
 <!-- Nav Bar sourced from w3schools. Section by Ian Wright <a href="index" class="active">Home</a>-->
 
