--- a/about.html
+++ b/about.html
@@ -68,9 +68,11 @@
 	</div>
 </div>
 
-<!-- Another image to break up the effect -->
-<div class="parallax-4">
-
+<!-- Back to first image to break up the effect -->
+<div class="parallax-1">
+		<div class="caption">
+			<span class="border">CDI GIS CONSULTING</span>
+		</div>
 </div>
 
 <!-- This section has each member on it with their role, a blurb, and a contact email to reach them.-->
