--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 </div>
 
 <!-- This section should have the name and goal. Inspired from https://www.fitnessblender.com/page/about-fitness-blender-->
-<div class="content">
+<div class="parallex-text">
 	<div>
 		<h3>ABOUT CDI GSI CONSULTING</h3>
 		<h1>Our goal is to make GIS services attainable, affordable, and approachable.</h1>
@@ -45,7 +45,7 @@
 </div>
 
 <!-- This section should go in a little more detail about the company-->
-<div class="content">
+<div class="parallex-text">
 	<div>
 		<h2>Created to help your company achieve their goals.</h2>
 		<p>We believe that GIS should be accessible to everyone, regardless of the size of the company. That's why we offer affordable pricing for various GIS services.</p>
@@ -58,7 +58,7 @@
 </div>
 
 <!-- This section should have a small section to preface how it all started. -->
-<div class="content">
+<div class="parallex-text">
 	<div>
 		<h2>A little about who we are and how it all got started</h2>
 		<p>CDI GSI Consulting was created by just three people; three students who joined forces for a project in a class called "Web Design and Programming". 
@@ -70,15 +70,12 @@
 
 <!-- Back to first image to break up the effect -->
 <div class="parallax-1">
-		<div class="caption">
-			<span class="border">CDI GIS CONSULTING</span>
-		</div>
+
 </div>
 
 <!-- This section has each member on it with their role, a blurb, and a contact email to reach them.-->
-<div class="content">
-	
-		<h2>Meet the Team</h2>
+<div class="parallex-text">
+	<h2>Meet the Team</h2>
 	
 	<div>
 		<div class="card">
