css edits / fixed </head>

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link type="text/css" rel="stylesheet" href="christinelacanilao.github.io/stylesheet.css" />
 <!-- <link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  -->
-
+</head>
 
 <img src="Images/cdilogo2.png" class="logo">
   
@@ -298,3 +298,4 @@
     </div>
 </div>
 </body>
+</html>
