--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link type="text/css" rel="stylesheet" href="christinelacanilao.github.io/stylesheet.css" />
 <!-- <link type="text/js" rel="javascript" href="christinelacanilao.github.io/javascript.js" />  -->
-
+</head>
 
 <img src="Images/cdilogo2.png" class="logo">
   
@@ -70,39 +70,40 @@
 <!-- This section has each member on it with their role, a blurb, and a contact email to reach them.-->
 <div class="parallex-text">
 	<h2>Meet the Team</h2>
+
+	<div class="card">
+	<h4>Danielle Cotton</h4>
+	<img src="Dani.jpg" alt="Danielle" style="width:20%">
+	</div>
+	<div class="container">
+		<p class="title">Co-founder &amp; President</p>
+		<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
+		<p>danielle.cotton@CDIConsulting.com</p>
+	</div>
+
+	<div class="card">
+	<h4>Christine Lacanilao</h4>
+	<img src="Images/Christine.gif" alt="Christine" style="width:20%">
+	</div>
+
+	<div class="container">
+		<p class="title">Co-founder &amp; Consultant</p>
+		<p>Christine completed her GIS certificate from Fleming College and co-founded the company. She joined the company as a consultant.</p>
+		<p>christine.lacanilao@CDIConsulting.com</p>
+	</div>
 	
-	<div>
-		<div class="card">
-        <h4>Danielle Cotton</h4>
-		<img src="Dani.jpg" alt="Danielle" style="width:20%">
-    	<div class="container">
-        	<p class="title">Co-founder &amp; President</p>
-        	<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
-        	<p>danielle.cotton@CDIConsulting.com</p>
-		</div>
-		</div>
-    <div>
-		<div class="card">
-        <h4>Christine Lacanilao</h4>
-		<img src="Images/Christine.gif" alt="Christine" style="width:20%">
-		<div class="container">
-			<p class="title">Co-founder &amp; Consultant</p>
-			<p>Christine completed her GIS certificate from Fleming College and co-founded the company. She joined the company as a consultant.</p>
-			<p>christine.lacanilao@CDIConsulting.com</p>
-		</div>
-		</div>
+	<div class="card">
+	<h4>Ian Wright</h4>
+	<img src="Images/Ian.jpg" alt="Ian" style="width:20%">
 	</div>
-		<div class="card">
-		<h4>Ian Wright</h4>
-		<img src="Images/Ian.jpg" alt="Ian" style="width:20%">
-		<div class="container">
-			<p class="title">Co-founder &amp; Consultant</p>
-			<p>Ian completed his GIS certificate from Fleming College and co-founded the company. He joined the company as a consultant.</p>
-			<p>ian.wright@CDIConsulting.com</p>
-		</div>
-		</div>
+
+	<div class="container">
+		<p class="title">Co-founder &amp; Consultant</p>
+		<p>Ian completed his GIS certificate from Fleming College and co-founded the company. He joined the company as a consultant.</p>
+		<p>ian.wright@CDIConsulting.com</p>
 	</div>
+		
+</div>
 	
 </div>
-
-
+</html>
