--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 <!-- Parallex Effect, inspired from https://www.w3schools.com/howto/howto_css_parallax.asp-->
 <div class="parallax-1">
 	<div class="caption">
-		<span class="border">CDI GIS CONSULTING</span>
+		<span class="border">ABOUT US</span>
 	</div>
 </div>
 
