--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
 <script src="javascript.js"></script>
 
 <body>
+<div class="background-1"></div>
+
 <!--Inspired from 
 https://www.farmersedge.ca/contact/
 https://www.w3schools.com/howto/howto_css_contact_section.asp-->
@@ -290,9 +292,5 @@ https://www.w3schools.com/howto/howto_css_contact_section.asp-->
     </form>
 </div>
     
-    
-
-
-
 </body>
 </html>
