testing new meet the team format

--- a/about.html
+++ b/about.html
@@ -69,6 +69,48 @@
 
 <!-- This section has each member on it with their role, a blurb, and a contact email to reach them.-->
 <div class="parallex-text">
+	<div class="row">
+		<div class="column">
+			<div class="card">
+			<img src="Images/Dani.jpg" alt="Danielle" style="width:100%">
+			<div class="container">
+				<h2>Danielle Cotton</h2>
+				<p class="title">Co-founder &amp; President</p>
+				<p>Danielle completed her GIS certificate from Fleming College and co-founded the company with her peers.</p>
+				<p>danielle.cotton@CDIConsulting.com</p>
+				<p><button class="button">Contact</button></p>
+			</div>
+			</div>
+		</div>
+			
+		<div class="column">
+			<div class="card">
+			<img src="Images/Christine.gif" alt="Christine" style="width:100%">
+			<div class="container">
+				<h2>Christine Lacanilao</h2>
+				<p class="title">Co-founder &amp; Consultant</p>
+				<p>Christine completed her GIS certificate from Fleming College and co-founded the company. She joined the company as a consultant.</p>
+				<p>christine.lacanilao@CDIConsulting.com</p>
+				<p><button class="button">Contact</button></p>
+			</div>
+			</div>
+		</div>
+		
+		<div class="column">
+			<div class="card">
+			<img src="Images/Iam.jpg" alt="Ian" style="width:100%">
+			<div class="container">
+				<h2>Ian Wright</h2>
+				<p class="title">Co-founder &amp; Consultant</p>
+				<p>Ian completed his GIS certificate from Fleming College and co-founded the company. He joined the company as a consultant.</p>
+				<p>ian.wright@CDIConsulting.com</p>
+				<p><button class="button">Contact</button></p>
+			</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 	<h2>Meet the Team</h2>
 
 	<div class="card">
