--- a/about.html
+++ b/about.html
@@ -69,6 +69,7 @@
 
 <!-- This section has each member on it with their role, a blurb, and a contact email to reach them.-->
 <div class="parallex-text">
+	<h2>Meet the Team</h2>
 	<div class="row">
 		<div class="column">
 			<div class="card">
@@ -98,7 +99,7 @@
 		
 		<div class="column">
 			<div class="card">
-			<img src="Images/Iam.jpg" alt="Ian" style="width:100%">
+			<img src="Images/Ian.jpg" alt="Ian" style="width:100%">
 			<div class="container">
 				<h2>Ian Wright</h2>
 				<p class="title">Co-founder &amp; Consultant</p>
