trying to align text

--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
 <script src="javascript.js"></script>
 
 <!-- Parallex Effect, inspired from https://www.w3schools.com/howto/howto_css_parallax.asp-->
+<body>
 <div class="parallax-1">
 	<div class="caption">
 		<span class="border">ABOUT US</span>
@@ -32,9 +33,11 @@
 </div>
 
 <!-- This section should have the name and goal. Inspired from https://www.fitnessblender.com/page/about-fitness-blender-->
+<div class="content">
 <div class="parallex-text">
 	<h3>ABOUT CDI GSI CONSULTING</h3>
 	<h1>Our goal is to make GIS services attainable, affordable, and approachable.</h1>
+</div>
 </div>
 
 <!-- Another image to break up the effect -->
@@ -43,9 +46,11 @@
 </div>
 
 <!-- This section should go in a little more detail about the company-->
+<div class="content">
 <div class="parallex-text">
 	<h2>Created to help your company achieve their goals.</h2>
 	<p>We believe that GIS should be accessible to everyone, regardless of the size of the company. That's why we offer affordable pricing for various GIS services.</p>
+</div>
 </div>
 
 <!-- Another image to break up the effect -->
@@ -54,12 +59,14 @@
 </div>
 
 <!-- This section should have a small section to preface how it all started. -->
+<div class="content">
 <div class="parallex-text">
 	<h2>A little about who we are and how it all got started</h2>
 	<p>CDI GSI Consulting was created by just three people; three students who joined forces for a project in a class called "Web Design and Programming". 
 		They felt that GIS and drones were pretty cool so why not make a company for it? Plus, they all had a nifty Basics Operations license to fly drones.
 		The three of them felt that they should at least put it to good use.
 	</p>
+</div>
 </div>
 
 <!-- Back to first image to break up the effect -->
@@ -112,4 +119,5 @@
 	</div>
 </div>
 
-	
+</body>
+</html>	
