--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
 <!-- This section should have the name and goal. Inspired from https://www.fitnessblender.com/page/about-fitness-blender-->
 <div class="content">
-<div class="parallex-text">
+<div class="parallax-text">
 	<h3>ABOUT CDI GSI CONSULTING</h3>
 	<h1>Our goal is to make GIS services attainable, affordable, and approachable.</h1>
 </div>
@@ -47,7 +47,7 @@
 
 <!-- This section should go in a little more detail about the company-->
 <div class="content">
-<div class="parallex-text">
+<div class="parallax-text">
 	<h2>Created to help your company achieve their goals.</h2>
 	<p>We believe that GIS should be accessible to everyone, regardless of the size of the company. That's why we offer affordable pricing for various GIS services.</p>
 </div>
@@ -60,7 +60,7 @@
 
 <!-- This section should have a small section to preface how it all started. -->
 <div class="content">
-<div class="parallex-text">
+<div class="parallax-text">
 	<h2>A little about who we are and how it all got started</h2>
 	<p>CDI GSI Consulting was created by just three people; three students who joined forces for a project in a class called "Web Design and Programming". 
 		They felt that GIS and drones were pretty cool so why not make a company for it? Plus, they all had a nifty Basics Operations license to fly drones.
@@ -75,7 +75,7 @@
 </div>
 
 <!-- This section has each member on it with their role, a blurb, and a contact email to reach them.-->
-<div class="parallex-text">
+<div class="parallax-text">
 	<h2>Meet the Team</h2>
 	<div class="row">
 		<div class="column">
