--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
   <!-- New content -->
   
  <div class="row">
-  <div class="column">
+  <div class="column1">
     <h2>GIS Services</h2>
     <p> CDI Consulting Releases the Industry’s First Automatic Crop Health Change Detection Tool Highlighting the ROI of Daily Satellite Imagery</p>
     <img src="Images/Crop-Health-Change-Notification-Release-Blog-Post-2-1080x675.jpg" width="400" height="250">
@@ -39,7 +39,7 @@
     <!-- Example of portfolio projects used from https://www.farmersedge.ca/farmers-edge-releases-the-industrys-first-automatic-crop-health-change-detection-tool-highlighting-the-roi-of-daily-satellite-imagery/-->
   </div>
   
-  <div class="column">
+  <div class="column1">
     <h2>Construction Services</h2>
     <h3>City of Nanaimo – Roundabout</h3>
     <p> The City of Nanaimo Engineering and Public Works Department tasked CDI to use our UAV technology to capture high definition video of traffic flow in a newly constructed “roundabout” during peak morning and afternoon time periods. CDI retains all necessary Transport Canada permissions for drone operation. Our UAV pilot captured over 1.5 hours of video over 9 total flights while ground support staff observed for possible safety concerns and directed foot traffic away from the flight path.
@@ -48,7 +48,7 @@
         <iframe width="540" height="304" src="https://www.youtube.com/embed/VeWLlTsBCm0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <!-- Example of portfolio projects used from https://www.crmgismapping.ca/projects/-->
     
-     <div class="column">
+     <div class="column1">
     <h2>Precision Agriculture Sevices</h2>
     <h3>City of Nanaimo – Roundabout</h3>
        <p> Use this area to explain a bit of stuff from farmers edge </p>
