--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-
+c
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,7 +34,7 @@
   <div class="column1">
     <h2>GIS Services</h2>
     <p> CDI Consulting Releases the Industry’s First Automatic Crop Health Change Detection Tool Highlighting the ROI of Daily Satellite Imagery</p>
-    <img src="Images/Crop-Health-Change-Notification-Release-Blog-Post-2-1080x675.jpg" width="400" height="250">
+    <img src="Images/GISServicesImage.jpg" width="400" height="250">
     <p>WINNIPEG, Manitoba – October 24, 2018 — CDI Consulting released a ground-breaking, digital tool that automatically scans satellite imagery and notifies growers of changes in their fields. Building upon the release of daily satellite imagery in 2017 and over 70 new features and tools launched this year, new Health Change Maps and Notifications function as an integrated toolset designed to accelerate the speed of decision-making when crop issues emerge. This unique precision digital tool pinpoints potential problems, including pests, disease, nutrient deficiencies, inclement weather, missed application, equipment malfunction, drainage issues, and more. This innovative technology enhances the value of daily imagery by helping growers save time, identify issues quicker, and react to crop stress before yield is impacted.</p>
     <!-- Example of portfolio projects used from https://www.farmersedge.ca/farmers-edge-releases-the-industrys-first-automatic-crop-health-change-detection-tool-highlighting-the-roi-of-daily-satellite-imagery/-->
   </div>
