--- a/services.html
+++ b/services.html
@@ -45,8 +45,8 @@ c
     <p> The City of Nanaimo Engineering and Public Works Department tasked CDI to use our UAV technology to capture high definition video of traffic flow in a newly constructed “roundabout” during peak morning and afternoon time periods. CDI retains all necessary Transport Canada permissions for drone operation. Our UAV pilot captured over 1.5 hours of video over 9 total flights while ground support staff observed for possible safety concerns and directed foot traffic away from the flight path.
 
         Output files were provided to the City of Nanaimo for the purpose of reviewing traffic patterns and adjusting for possible safety concerns within the roundabout. </p>
-        <iframe width="540" height="304" src="https://www.youtube.com/embed/VeWLlTsBCm0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <!-- Example of portfolio projects used from https://www.crmgismapping.ca/projects/-->
+      <img src="Images/DroneConstruction.jpeg" width="400" height="250">  
+    
     
      <div class="column1">
     <h2>Precision Agriculture Sevices</h2>
