--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-c
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,7 +46,7 @@ c
 
         Output files were provided to the City of Nanaimo for the purpose of reviewing traffic patterns and adjusting for possible safety concerns within the roundabout. </p>
       <img src="Images/DroneConstruction.jpeg" width="400" height="250">  
-    
+    </div>
     
      <div class="column1">
     <h2>Precision Agriculture Sevices</h2>
