--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
     <p></p>
   </div>
 </div>
+<div class="index-background">
+  
+</div>
 <footer>
     <div class="footer">  
         <div class="leftside-footer">			
